--- a/README.rdoc
+++ b/README.rdoc
@@ -11,10 +11,6 @@ In your model:
 
   class User < ActiveRecord::Base
     has_digest :encrypted_password, :depends => :password
-
-    def authenticate(password)
-      encrypted_password == digest(salt, password)
-    end
   end
 
 In your migrations:
@@ -22,8 +18,7 @@ In your migrations:
   class CreateUsers < ActiveRecord::Migration
     def self.up
       create_table :users do |t|
-        t.string :salt,               :limit => 40
-        t.string :encrypted_password, :limit => 40
+        t.string :salt, :encrypted_password, :limit => 40
       end
     end
 
@@ -35,8 +30,15 @@ In your migrations:
 In your tests:
 
   class UserTest < ActiveSupport::TestCase
-    should_have_digest :encrypted_password
+    should_have_digest :encrypted_password, :depends => :password
   end
 
+Back in your model:
+
+  class User < ActiveRecord::Base
+    def authenticate(password)
+      encrypted_password == digest(salt, password)
+    end
+  end
 
 Copyright (c) 2008 Matthew Todd, released under the MIT license
