--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 =HasDigest
 
-HasDigest provides an ActiveRecord macro, +has_digest+, that captures the pattern of writing encrypted passwords, api tokens, and the like in +before_save+ callbacks. Digest attributes may either stand alone or depend on the values of other attributes. Digests with dependencies are also magically salted for models having a +salt+ attribute.
+HasDigest is an +ActiveRecord+ macro that makes it easy to write things like encrypted passwords and api tokens +before_save+. Digest attributes may either stand alone or depend on the values of other attributes. Digests with dependencies are also magically salted for models having a +salt+ attribute.
 
 See the documentation for the +has_digest+ method for options.
 
